--- a/src/PI.ToDoMng.WebApi/PI.ToDoMng.WebApi.csproj
+++ b/src/PI.ToDoMng.WebApi/PI.ToDoMng.WebApi.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="9.0.6" />
   </ItemGroup>
 
 </Project>
