--- a/src/PI.ToDoMng.WebApi/PI.ToDoMng.WebApi.csproj
+++ b/src/PI.ToDoMng.WebApi/PI.ToDoMng.WebApi.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="MySql.EntityFrameworkCore" Version="9.0.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.6" />
   </ItemGroup>
 
 </Project>
