--- a/src/PI.ToDoMng.WebApi/appsettings.json
+++ b/src/PI.ToDoMng.WebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ToDoMng": "server=mysql;port=3306;database=ToDoMng;user=ToDoMngAdmin;password=admin"
+  }
 }
