play with migrations

--- a/src/PI.ToDoMng.WebApi/appsettings.json
+++ b/src/PI.ToDoMng.WebApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ToDoMng": "server=mysql;port=3306;database=ToDoMng;user=ToDoMngAdmin;password=admin"
+    "ToDoMng": "server=localhost;port=3306;database=ToDoMng;user=ToDoMngAdmin;password=admin"
   }
 }
