bash to setup sql server

--- a/src/PI.ToDoMng.WebApi/appsettings.json
+++ b/src/PI.ToDoMng.WebApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ToDoMng": "server=localhost;port=3306;database=ToDoMng;user=ToDoMngAdmin;password=admin"
+    "ToDoMng": "Server=localhost;Database=ToDoMng;User ID=WebAppUser;Password=MyStrong!Passw0rd123;TrustServerCertificate=True;"
   }
 }
