--- a/.github/workflows/build-net.yml
+++ b/.github/workflows/build-net.yml
@@ -24,3 +24,6 @@ jobs:
 
     - name: Build
       run: dotnet build ./src/PI.ToDoMng.sln --no-restore
+
+    - name: Test
+      run: dotnet test --no-build --verbosity normal
